Overflow Fix for Anonymous Activities

--- a/styles/toast.css
+++ b/styles/toast.css
@@ -38,6 +38,10 @@
     background-color: var(--green);
 }
 
+.toast.info {
+    background-color: var(--black);
+}
+
 .toast.warning {
     background-color: var(--orange);
 }
